tests/cases/fail/list_char_method_arg_type.p4
def main() -> None:
    xs: list[char] = ['a']
    xs.append(True)
